--- a/IAGenerative/src/main/resources/application.properties
+++ b/IAGenerative/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=IAGenerative
 
 #Configuracion bd
 
-spring.datasource.url= jdbc:mysql://localhost:3306/ia_generative
-spring.datasource.username= paul
-spring.datasource.password= paul123
+spring.datasource.url= {conection}
+spring.datasource.username= {user}
+spring.datasource.password= {password}
 
 #
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
